MODELER-497
===========

  - Fixed: walking functionality from MODELER-437 iterates multiple times over the same component


MODELER-437
===========

  - Refactor walking the UIComponent objects within a panels collection
  

MODELER-530
===========

 - Remove regexp validation of UDP IP address


MODELER-528
===========

 - Generated XML files (controller/panel) contain duplicate ids
   Fixed by increasing offset from 100k to 100m


MODELER-513
===========

  - Add 'line ending' configuration to UDP protocol
    (Simon Vincent)


MODELER-435
===========

 - Add 'data' field to 1-wire protocol


MODELER-456
===========

  - Add Micasaverde Vera protocol definition and controller
    configuration section to OpenRemote Designer (Marcus Redeker)


MODELER-416
===========

 - contentType attribute for HTTP protocol (Marcus Redeker)


MODELER-470
===========

  - EnOcean configuration (Rainer Hitz)



Designer 2.14.0 (2013-XX-XX Markab)
===================================

 New Features:

   - Z-Wave protocol configuration
   - panStamps Lagarto configuration (MODELER-397)
   - Round-robin database (RRD) configuration (MODELER-394)
   - Add Domintell configuration (MODELER-391)

 Fixes:

   - MODELER-346: regexp validation for IP fields in TCP
     and Telnet protocols were wrong. Validations have
     been disabled.
   - MODELER-384: Property form title is wrong for webview
     and color picker components
   - MODELER-360: Command, Sensor, Switch names are
     not correctly encoded/decoded
   - MODELER-385: Double scrollbar on widget selection
   - MODELER-395: Incorrect password field generated
     in panel.xml for Web element
   - MODELER-389: LazyInitializationException on
     Device.deviceAttrs
   - MODELER-396: org.springframework.orm.hibernate3.HibernateSystemException
     when saving UI design
   - MODELER-398: Setting a sensor on a Web element does not work
   - MODELER-392: Fractional Widget Coordinates when Browser
     has non-default zoom


